<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>indoor_fusion_bridge</name>
  <version>1.0.0</version>
  <description>Route tracker connecting the PCT-DDDMR web UI to cmd_vel output</description>
  <maintainer email="dev@robot.com">robot</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nlohmann-json-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
